--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "boilermaker",
-  "version": "2.0.0",
-  "description": "Some boilerplate code to get you started - get shakin'!",
+  "name": "stock-tracker",
+  "version": "1.0.0",
+  "description": "",
   "engines": {
     "node": ">= 7.0.0"
   },
