--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "stock-tracker",
   "version": "1.0.0",
   "description": "",
-  "engines": {
-    "node": ">= 7.0.0"
-  },
+  "private": true,
+  "author": "Tal Luigi",
+  "license": "MIT",
   "main": "index.js",
+  "engines": {
+    "node": "12.11.1"
+  },
   "scripts": {
     "build-client": "webpack",
     "build-client-watch": "webpack -w",
@@ -38,8 +41,6 @@
       "git add"
     ]
   },
-  "author": "Fullstack Academy of Code",
-  "license": "MIT",
   "dependencies": {
     "axios": "^0.19.0",
     "chalk": "^2.4.2",
