--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ notifications:
 install:
   - npm ci # Faster, goes only from package-lock.json
 before_script:
-  - psql -c 'create database "meetup-tracker-test";' -U postgres # Remember to change this name if you change it elsewhere (e.g. package.json)
+  - psql -c 'create database "stock-tracker-test";' -U postgres # Remember to change this name if you change it elsewhere (e.g. package.json)
 script:
   - npm test # Test the code
-  - npm run build-client # Make the bundle
+  - npm run build # Make the bundle
 # before_deploy:
 #   - rm -rf node_modules # Omit from the tarball, since we skip cleanup
 # deploy:
